<resources>
    <string name="app_name">GuiaTeCDE</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="navigation_name_home">Inicio</string>
    <string name="navigation_name_profile">Perfil</string>
    <string name="navigation_name_favorite">Favoritos</string>
    <string name="navigation_name_top">Top</string>
    <string name="navigation_name_question">Encuesta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
