<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/navigation_name_home" />
        <item
            android:id="@+id/nav_top"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/navigation_name_top" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/navigation_name_favorite" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/navigation_name_profile" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_question"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/navigation_name_question" />
        </menu>
    </item>

</menu>
